Bug 355942 - Imports: "from ase.io import Trajectory" does not work
Summary: Imports: "from ase.io import Trajectory" does not work
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: Language support (other bugs)
Version First Reported In: 1.7.1
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Sven Brauch
URL:
Keywords:
: 358461 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-26 13:32 UTC by Sven Brauch
Modified: 2016-01-30 23:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Brauch 2015-11-26 13:32:33 UTC
that class is not found, but it should work. Need to investigate why.
Comment 1 Sven Brauch 2015-11-26 13:53:04 UTC
Works ok in code completion.
Comment 2 Sven Brauch 2015-11-27 00:45:34 UTC
Problem is that it tries to find that in the built-in io.py file: 

kdevelop(8714)/(kdev.python.duchain) unknown: Found module path [path/path in file]:  QPair(QUrl("file:///home/sven/install5/share/kdevpythonsupport/documentation_files/io.py"),("trajectory", "TrajectoryWriter"))
Comment 3 Sven Brauch 2015-12-07 17:45:45 UTC
Git commit b45544f3d4dd9cb1873b92a609f45a68f5f6e471 by Sven Brauch.
Committed on 07/12/2015 at 17:45.
Pushed by brauch into branch 'master'.

Do not crash if KDE platform integration is loaded but SNI is unavailable
REVIEW:126212

M  +8    -1    src/kstatusnotifieritem.cpp

http://commits.kde.org/knotifications/b45544f3d4dd9cb1873b92a609f45a68f5f6e471
Comment 4 Sven Brauch 2015-12-07 17:47:04 UTC
ugh, wrong bug number again
Comment 5 Sven Brauch 2016-01-30 22:45:38 UTC
*** Bug 358461 has been marked as a duplicate of this bug. ***
Comment 6 Sven Brauch 2016-01-30 23:23:03 UTC
Git commit 9254f3ba50f380045243a4f9b1013eb93de15bfb by Sven Brauch.
Committed on 30/01/2016 at 23:11.
Pushed by brauch into branch '5.0'.

imports: abort checking a path when cd into it failed

Quite obvious error, actually. Caused

M  +9    -3    duchain/contextbuilder.cpp

http://commits.kde.org/kdev-python/9254f3ba50f380045243a4f9b1013eb93de15bfb