Do not crash if KDE platform integration is loaded but SNI is unavailable

BUG:355942
REVIEW:126212